code review suggestions

--- a/docs/guides/force-organizations.mdx
+++ b/docs/guides/force-organizations.mdx
@@ -1,6 +1,6 @@
 ---
-title: Hide personal accounts and force organizations
-description: Learn how to hide personal accounts and force organizations in your Clerk application.
+title: Hide Personal Accounts and force organizations
+description: Learn how to hide Personal Accounts and force organizations in your Clerk application.
 ---
 
 <TutorialHero
@@ -15,25 +15,25 @@ description: Learn how to hide personal accounts and force organizations in your
     }
   ]}
 >
-  - Hide personal accounts from UI components
+  - Hide Personal Accounts from UI components
   - Detect an active organization
   - Set an active organization
   - Limit access to users with active organizations only
 </TutorialHero>
 
-# Hide personal accounts and force organizations
+## Introduction
 
-In this guide, you will learn how to hide a user's "personal account" in order to appear as if they only have an organization account. This is useful for applications that are built for organizations only, such as B2B applications.
+In this guide, you will learn how to hide a user's Personal Account in order to appear as if they only have access to organizations. You will also learn how to limit access to your application to only users with active organizations, further enforcing organization-centric access. This is useful for applications that are built for organizations only, such as B2B applications.
 
 This guide will be written for Next.js applications using App Router, but the same concepts can be applied to any application using Clerk.
 
 <Steps>
 
-### Hide personal accounts from UI components
+### Hide Personal Accounts from UI components
 
-To begin forcing organizations in your application, you need to remove a user's personal account from the UI. A user's personal account cannot be disabled; it can only be hidden. 
+To begin forcing organizations in your application, you need to remove a user's Personal Account from the UI. A user's Personal Account cannot be disabled; it can only be hidden. 
 
-If you have an application set up to use organizations, you might have the [`<OrganizationList />`](/docs/components/organization/organization-list) and [`<OrganizationSwitcher />`](/docs/components/organization/organization-switcher) components in your application. These components will show a user's personal account by default, but you can hide it by passing the `hidePersonal` prop.
+If you have an application set up to use organizations, you might have the [`<OrganizationList />`](/docs/components/organization/organization-list) and [`<OrganizationSwitcher />`](/docs/components/organization/organization-switcher) components in your application. These components will show a user's Personal Account by default, but you can hide it by passing the `hidePersonal` prop.
 
 <Tabs items={["<OrganizationList />", "<OrganizationSwitcher />"]}>
   <Tab>
@@ -71,12 +71,12 @@ With Clerk, a user can have many organization memberships, but only one of them 
 
 #### Detect an active organization
 
-A session will always include an `organizationId` via the [`Authentication` object](/docs/references/nextjs/authentication-object#example-with-active-organization). This can be used to detect if a user has an active organization.
+A session will always include an `orgId` via the [`Authentication` object](/docs/references/nextjs/authentication-object#example-with-active-organization). This can be used to detect if a user has an active organization.
 
 <Tabs items={["App Router Server Component", "App Router Client Component"]}>
   <Tab>
 
-    The [`auth()`](/docs/references/nextjs/auth) helper function can be used to get the `organizationId` from the session *server-side*. If the `organizationId` is `null`, then the user does not have an active organization.
+    The [`auth()`](/docs/references/nextjs/auth) helper function can be used to get the `orgId` from the session *server-side*. If the `orgId` is `null`, then the user does not have an active organization.
 
     ```tsx
     import { auth } from '@clerk/nextjs/server'
@@ -92,7 +92,7 @@ A session will always include an `organizationId` via the [`Authentication` obje
 
   <Tab>
 
-    The [`useAuth()`](/docs/references/react/use-auth) hook can be used to get the `organizationId` from the session *client-side*. If the `organizationId` is `null`, then the user does not have an active organization.
+    The [`useAuth()`](/docs/references/react/use-auth) hook can be used to get the `orgId` from the session *client-side*. If the `orgId` is `null`, then the user does not have an active organization.
   
     ```tsx
     "use client"
@@ -110,9 +110,9 @@ A session will always include an `organizationId` via the [`Authentication` obje
 
 #### Set an active organization
 
-In the case of [Clerk components](/docs/components/overview), an organization will *automatically* be set as active each time the user creates an organization, accepts an invitation, or selects a membership from the organization switcher. In the case of custom flows, you will need to provide the logic for setting an organization as active. Don't worry, Clerk's [`useOrganizationList`](/docs/hooks/use-organization-list) hook provides a [`setActive`](/docs/references/react/use-organization-list) helper function to help you with this.
+In the case of [Clerk components](/docs/components/overview), an organization will *automatically* be set as active each time the user creates an organization, accepts an invitation, or selects a membership from the organization switcher. In the case of custom flows, you will need to provide the logic for setting an organization as active. Don't worry, Clerk's [`useOrganizationList`](/docs/hooks/use-organization-list) hook provides a [`setActive`](/docs/references/react/use-organization-list) method to help you with this.
 
-In the example below, a custom organization switcher is created. It allows a user to select an organization from a list of their memberships. The `useOrganizationList()` hook is used to fetch a list of the user's memberships, and the `setActive` helper function is used to set the selected organization as active.
+In the example below, a custom organization switcher is created. It allows a user to select an organization from a list of their memberships. The `useOrganizationList()` hook is used to fetch a list of the user's memberships, and the `setActive` method is used to set the selected organization as active.
 
 <Callout type="warning">
   Setting an active organization can only be performed client-side.
@@ -122,7 +122,6 @@ In the example below, a custom organization switcher is created. It allows a use
 "use client"
 
 import { useOrganizationList } from "@clerk/nextjs";
-import React from "react";
  
 export const CustomOrgSwitcher = () => {
   const { isLoaded, setActive, userMemberships } = useOrganizationList({
@@ -164,7 +163,9 @@ export const CustomOrgSwitcher = () => {
 
 #### Set an active organization based on the URL
 
-In some cases, you might want to set an active organization based on the URL. For example, if you have a URL like `/organizations/org_123`, you might want to set `org_123` as the active organization. In this case, you can use Next.js's [`useParams()`](https://nextjs.org/docs/app/api-reference/functions/use-params) hook to get the organization ID from the URL, and then use the `setActive` helper function to set the organization as active.
+In some cases, you might want to set an active organization based on the URL. For example, if you have a URL like `/organizations/org_123`, you might want to set `org_123` as the active organization.
+
+In the example below, a component called `SyncActiveOrganization` is created. The Next.js [`useParams()`](https://nextjs.org/docs/app/api-reference/functions/use-params) hook is used to get the organization ID from the URL, and then the `setActive` method is used to set the organization as active.
 
 ```tsx filename="app/utils/sync-active-organization.tsx"
 "use client"
@@ -203,19 +204,135 @@ export function SyncActiveOrganization() {
 
 ### Limit access to users with active organizations only
 
-Now that you have hidden personal accounts from the UI and can detect and set an active organization, you can limit access to users with active organizations only.
+Now that you have hidden Personal Accounts from the UI and can detect and set an active organization, you can limit access to your application to users with active organizations only. This will ensure that users without active organizations cannot access your application.
 
 It's possible for a user to be logged in, but not have an active organization. This can happen in two cases:
   - The user created an account and hasn't created an organization yet
   - The user joined or created multiple organizations, and left or deleted the active organization
 
+There are two ways to limit access to users with active organizations only:
+  - Limit access using the [`authMiddleware`](/docs/references/nextjs/auth-middleware) helper
+  - Limit access using an App Router layout
+
 Based on your use case, you can decide to limit users either in the entire app or a specific part of it. For example, a B2B application might need to limit access to only users with an active organization, whereas a B2B2C application might limit only the `/dashboard` path to users with an active organization.
 
-#### Limit the entire application to only users with active organizations
+#### Limit access using the `authMiddleware` helper
 
-In Next.js App Router applications, you can use a [layout](https://nextjs.org/docs/app/building-your-application/routing/pages-and-layouts#layouts) to limit the entire application to only users with active organizations.
+Clerk's `authMiddleware` helper can be used in both App Router and Pages Router applications to limit access to users with active organizations only. 
 
-In the example below, a component called `RequiredActiveOrgLayout` is created. This component will be used as a layout for all pages that require an active organization. If the user has an active organization, the children will be rendered. If the user does not have an active organization, the organization selection page will be rendered.
+To limit access to the entire application, your middleware can be configured as follows:
+
+```tsx filename="middleware.ts"
+  import { authMiddleware, redirectToSignIn } from '@clerk/nextjs';
+
+  export default authMiddleware({
+    afterAuth(auth, req, evt) {
+      ...
+      // Redirect logged in users to organization selection page if they are not active in an organization
+      if(auth.userId && !auth.orgId && req.nextUrl.pathname !== "/org-selection"){
+        const searchParams = new URLSearchParams({
+          redirectUrl: req.url
+        })
+
+        const orgSelection = new URL(`/org-selection?${searchParams.toString()}`, req.url);
+
+        return NextResponse.redirect(orgSelection)
+      }
+      ...
+    }
+  });
+```
+
+To limit access to a specific part of the application, you can check if the path the user is visiting is the path you want to limit access to. In this example, the `/dashboard` path is limited to users with active organizations only. If the user is not active in an organization, they will be redirected to the `/dashboard/org-selection` page.
+
+```tsx filename="middleware.ts"
+  import { authMiddleware, redirectToSignIn } from '@clerk/nextjs';
+
+  export default authMiddleware({
+    afterAuth(auth, req, evt) {
+      ...
+      // Redirect logged in users to organization selection page if they are not active in an organization
+      if(auth.userId && !auth.orgId && req.nextUrl.pathname !== "/dashboard/org-selection"){
+      const searchParams = new URLSearchParams({
+        redirectUrl: req.url
+      })
+ 
+      const orgSelection = new URL(`/dashboard/org-selection?${searchParams.toString()}`, req.url);
+ 
+      return NextResponse.redirect(orgSelection)
+      }
+      ...
+    }
+  });
+```
+
+Now that you have configured your middleware to redirect users to the `/org-selection` page if they are not active in an organization, you need to create the `/org-selection` page. This page will allow users to select an organization or create their own organization.
+
+<Tabs type="router" items={["App Router", "Pages Router"]}>
+  <Tab>
+    ```tsx filename="app/org-selection/page.tsx"
+    "use client"
+
+    import { OrganizationList } from "@clerk/nextjs"
+    import { useRouter } from "next/router";
+
+    export default function OrganizationSelection() {
+      const { query } = useRouter();
+
+      return (
+        <section>
+          <h1>Welcome to the Organization Selection page.</h1>
+          <p>
+            This part of the application requires the user to select an
+            organization in order to proceed. If you are not part of an
+            organization, you can accept an invitation or create your own
+            organization.
+          </p>
+          <OrganizationList
+            hidePersonal={true}
+            afterCreateOrganizationUrl={query.redirectUrl ?? "/"}
+            afterSelectOrganizationUrl={query.redirectUrl ?? "/"}
+          />
+        </section>
+      )
+    }
+    ```
+  </Tab>
+  
+  <Tab>
+    ```tsx filename="pages/org-selection.tsx"
+    import { OrganizationList } from "@clerk/nextjs"
+    import { useRouter } from "next/router";
+
+    export default function OrganizationSelection() {
+      const { query } = useRouter();
+
+      return (
+        <section>
+          <h1>Welcome to the Organization Selection page.</h1>
+          <p>
+            This part of the application requires the user to select an
+            organization in order to proceed. If you are not part of an
+            organization, you can accept an invitation or create your own
+            organization.
+          </p>
+          <OrganizationList
+            hidePersonal={true}
+            afterCreateOrganizationUrl={query.redirectUrl ?? "/"}
+            afterSelectOrganizationUrl={query.redirectUrl ?? "/"}
+          />
+        </section>
+      )
+    }
+    ```
+  </Tab>
+</Tabs>
+
+#### Limit access using an App Router layout
+
+In Next.js App Router applications, instead of using `authMiddleware`, you also have the option to use a [layout](https://nextjs.org/docs/app/building-your-application/routing/pages-and-layouts#layouts) to limit access to users with active organizations only.
+
+In the example below, a component called `RequiredActiveOrgLayout` is created. This component will be used as a layout for all pages that require an active organization. If the user has an active organization, the route the user is visting will be rendered. If the user does not have an active organization, the organization selection page will be rendered.
 
 ```tsx filename="app/(with-active-organization)/layout.tsx"
   import { OrganizationList } from "@clerk/nextjs"
@@ -247,69 +364,16 @@ In the example below, a component called `RequiredActiveOrgLayout` is created. T
   }
 ```
 
-In Next.js Pages Router applications, Clerk's [`authMiddleware`](/docs/references/nextjs/auth-middleware) helper can be used to limit the entire application to only user's with an active organization.
-
-This following example will show you how to configure the [`authMiddleware`](/docs/references/nextjs/auth-middleware) helper to redirect users to the `/org-selection` page if they are not active in an organization.
-
-<Tabs items={["Middleware", "Organization Selection page"]}>
-  <Tab>
-    ```tsx filename="middleware.ts"
-    import { authMiddleware, redirectToSignIn } from '@clerk/nextjs';
-
-    export default authMiddleware({
-      afterAuth(auth, req, evt) {
-        ...
-        // Redirect logged in users to organization selection page if they are not active in an organization
-        if(auth.userId && !auth.orgId && req.nextUrl.pathname !== "/org-selection"){
-          const searchParams = new URLSearchParams({
-            redirectUrl: req.url
-          })
-
-          const orgSelection = new URL(`/org-selection?${searchParams.toString()}`, req.url);
-
-          return NextResponse.redirect(orgSelection)
-        }
-        ...
-      }
-    });
-    ```
-  </Tab>
-
-  <Tab>
-    ```tsx filename="pages/org-selection.tsx"
-    import { OrganizationList } from "@clerk/nextjs"
-    import { useRouter } from "next/router";
-
-    export default function OrganizationSelection() {
-      const { query } = useRouter();
-
-      return (
-        <section>
-          <h1>Welcome to the Organization Selection page.</h1>
-          <p>
-            This part of the application requires the user to select an
-            organization in order to proceed. If you are not part of an
-            organization, you can accept an invitation or create your own
-            organization.
-          </p>
-          <OrganizationList
-            hidePersonal={true}
-            afterCreateOrganizationUrl={query.redirectUrl ?? "/"}
-            afterSelectOrganizationUrl={query.redirectUrl ?? "/"}
-          />
-        </section>
-      )
-    }
-    ```
-  </Tab>
-</Tabs>
-
-#### Limit parts of an application to only users with active organizations
-
-TODO: Did we want to add a section here with example functions/components for limiting specific parts of an application?
-
 </Steps>
 
 ## Finished 🎉
 
-TODO.
+You have configured your Clerk application to hide personal accounts and enforce organization-centric access. By following this guide, you've learned how to:
+
+- hide Personal Accounts from UI components
+- detect an active organization by using Clerk's `auth()` helper function or `useAuth()` hook
+- set an active organization automatically through Clerk components or manually using the `setActive` method
+- set an active organization based on the URL
+- limit access to your application to only users with active organizations by utilizing Clerk's `authMiddleware` helper or by implementing an App Router layout
+
+Now that you've completed these steps, your application is well-configured for organizational use, providing a streamlined experience for users associated with organizations.
