--- a/docs/account-portal/custom-redirects.mdx
+++ b/docs/account-portal/custom-redirects.mdx
@@ -1,6 +1,6 @@
 ---
 title: Customizing your Account Portal redirect
-description:  Customize where your users are redirected to after they sign in or sign up.
+description: Customize where your users are redirected to after they sign in or sign up.
 ---
 
 # Customizing your Account Portal redirects
@@ -12,10 +12,11 @@ After a user signs in or signs up, Clerk automatically redirects users back to y
 You can define the paths you want the users to be redirected to via environment variables. In this example, we redirect users to `/dashboard` after signing in, and to `/onboarding` after signing up.
 
 <CodeBlockTabs type="framework" options={["Next.js", "Remix"]}>
-```sh filename=".env"
+```sh filename=".env" 
 NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/dashboard
-NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/onboarding
+NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/onboarding 
 ```
+
 ```sh filename=".env"
 CLERK_AFTER_SIGN_IN_URL=/dashboard
 CLERK_AFTER_SIGN_UP_URL=/onboarding
@@ -51,12 +52,17 @@ export default authMiddleware({
 You can explicitly define the redirect paths by passing the `afterSignInUrl` and `afterSignUpUrl` properties to the respective components.
 
 ### Control components
+
 <CodeBlockTabs options={['ClerkProvider', 'RedirectToSignIn', 'RedirectToSignUp']}>
 
 ```javascript filename="example.js"
 function App() {
   return (
-    <ClerkProvider publishableKey={clerkPubKey} afterSignInUrl='/dashboard' afterSignUpUrl='/onboarding' >
+    <ClerkProvider
+      publishableKey={clerkPubKey}
+      afterSignInUrl="/dashboard"
+      afterSignUpUrl="/onboarding"
+    >
       <SignedIn>
         <Welcome />
       </SignedIn>
@@ -67,6 +73,7 @@ function App() {
   );
 }
 ```
+
 ```javascript filename="example.js"
 function App() {
   return (
@@ -75,26 +82,34 @@ function App() {
         <Welcome />
       </SignedIn>
       <SignedOut>
-        <RedirectToSignIn afterSignInUrl='/dashboard' afterSignUpUrl='/onboarding' />
+        <RedirectToSignIn
+          afterSignInUrl="/dashboard"
+          afterSignUpUrl="/onboarding"
+        />
       </SignedOut>
     </ClerkProvider>
   );
 }
 ```
+
 ```javascript filename="example.js"
 function App() {
   return (
-    <ClerkProvider publishableKey={clerkPubKey} >
+    <ClerkProvider publishableKey={clerkPubKey}>
       <SignedIn>
         <Welcome />
       </SignedIn>
       <SignedOut>
-        <RedirectToSignUp afterSignInUrl='/dashboard' afterSignUpUrl='/onboarding' />
+        <RedirectToSignUp
+          afterSignInUrl="/dashboard"
+          afterSignUpUrl="/onboarding"
+        />
       </SignedOut>
     </ClerkProvider>
   );
 }
 ```
+
 </CodeBlockTabs>
 
 <Callout type="info" emoji="💡">
@@ -106,83 +121,83 @@ function App() {
 In the case that you are using a [`<SignInButton>`](/docs/components/unstyled/sign-in-button) or [`<SignUpButton>`](/docs/components/unstyled/sign-up-button), you can also pass the properties into those components. We recommend defining both `afterSignInUrl` and `afterSignUpUrl` redirects in each button as some users may choose to sign up instead after attempting to sign in.
 
 <CodeBlockTabs type="framework" options={["Next.js", "React", "Remix", "Gatsby"]}>
-  ```jsx filename="pages/index.js"
-  import { SignInButton, SignUpButton } from "@clerk/nextjs";
+```jsx filename="pages/index.js"
+import { SignInButton, SignUpButton } from "@clerk/nextjs";
 
-  export default function Home() {
-    return (
-      <div>
-        <h1>Welcome!</h1>
+export default function Home() {
+return (
+  <div>
+    <h1>Welcome!</h1>
+    
+    <SignInButton afterSignInUrl="/dashboard" afterSignUpUrl="/onboarding">
+      Sign in
+    </SignInButton>
 
-        <SignInButton afterSignInUrl='/dashboard' afterSignUpUrl='/onboarding'>
-          Sign in
-        </SignInButton>
+    <SignUpButton afterSignInUrl="/dashboard" afterSignUpUrl="/onboarding">
+      Sign up
+    </SignUpButton>
+  </div>
+);
+}
+```
 
-        <SignUpButton afterSignInUrl='/dashboard' afterSignUpUrl='/onboarding'>
-          Sign up
-        </SignUpButton>
-      </div>
-    );
-  }
-  ```
+```jsx filename="example.js"
+import { SignInButton, SignUpButton } from "@clerk/clerk-react";
 
-  ```jsx filename="example.js"
-  import { SignInButton, SignUpButton } from "@clerk/clerk-react";
+export default function Example() {
+  return (
+    <div>
+      <h1>Welcome!</h1>
 
-  export default function Example() {
-    return (
-      <div>
-        <h1>Welcome!</h1>
+      <SignInButton afterSignInUrl="/dashboard" afterSignUpUrl="/onboarding">
+        Sign in
+      </SignInButton>
 
-        <SignInButton afterSignInUrl='/dashboard' afterSignUpUrl='/onboarding'>
-          Sign in
-        </SignInButton>
+      <SignUpButton afterSignInUrl="/dashboard" afterSignUpUrl="/onboarding">
+        Sign up
+      </SignUpButton>
+    </div>
+  );
+}
+```
 
-        <SignUpButton afterSignInUrl='/dashboard' afterSignUpUrl='/onboarding'>
-          Sign up
-        </SignUpButton>
-      </div>
-    );
-  }
-  ```
+```jsx filename="pages/index.js"
+import { SignInButton, SignUpButton } from "@clerk/remix";
 
-  ```jsx filename="pages/index.js"
-  import { SignInButton, SignUpButton } from "@clerk/remix";
+export default function Home() {
+  return (
+    <div>
+      <h1>Welcome!</h1>
 
-  export default function Home() {
-    return (
-      <div>
-        <h1>Welcome!</h1>
+      <SignInButton afterSignInUrl="/dashboard" afterSignUpUrl="/onboarding">
+        Sign in
+      </SignInButton>
 
-        <SignInButton afterSignInUrl='/dashboard' afterSignUpUrl='/onboarding'>
-          Sign in
-        </SignInButton>
+      <SignUpButton afterSignInUrl="/dashboard" afterSignUpUrl="/onboarding">
+        Sign up
+      </SignUpButton>
+    </div>
+  );
+}
+```
 
-        <SignUpButton afterSignInUrl='/dashboard' afterSignUpUrl='/onboarding'>
-          Sign up
-        </SignUpButton>
-      </div>
-    );
-  }
-  ```
+```jsx filename="pages/index.js"
+import { SignInButton, SignUpButton } from "gatsby-plugin-clerk";
 
-  ```jsx filename="pages/index.js"
-  import { SignInButton, SignUpButton } from "gatsby-plugin-clerk";
+export default function Home() {
+  return (
+    <div>
+      <h1>Welcome!</h1>
 
-  export default function Home() {
-    return (
-      <div>
-        <h1>Welcome!</h1>
+      <SignInButton afterSignInUrl="/dashboard" afterSignUpUrl="/onboarding">
+        Sign in
+      </SignInButton>
 
-        <SignInButton afterSignInUrl='/dashboard' afterSignUpUrl='/onboarding'>
-          Sign in
-        </SignInButton>
-
-        <SignUpButton afterSignInUrl='/dashboard' afterSignUpUrl='/onboarding'>
-          Sign up
-        </SignUpButton>
-      </div>
-    );
-  }
-  ```
+      <SignUpButton afterSignInUrl="/dashboard" afterSignUpUrl="/onboarding">
+        Sign up
+      </SignUpButton>
+    </div>
+  );
+}
+```
 </CodeBlockTabs>
