--- a/docs/references/javascript/client.mdx
+++ b/docs/references/javascript/client.mdx
@@ -17,7 +17,7 @@ The `Client` object also holds information about any sign in or sign up attempts
 | `signUp` | [`SignUp`](/docs/references/javascript/sign-up/sign-up) \| `null` | The current sign up attempt, or `null` if there is none. |
 | `sessions` | [`Session[]`](/docs/references/javascript/session) | A list of sessions that have been created on this client. |
 | `activeSessions` | [`Session[]`](/docs/references/javascript/session) | A list of active sessions on this client. |
-| `lastActiveSessiond` | `string` | Unique identifier of the last active [`Session`](/docs/references/javascript/session) on this client. |
+| `lastActiveSessionId` | `string` | Unique identifier of the last active [`Session`](/docs/references/javascript/session) on this client. |
 | `updatedAt` | `Date` | Timestamp of last update for the client. |
 
 ## Methods
